:trollface: Started the site
Ayden C

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <header>Navigation</header>
+    <header>
+        <nav>
+            <div class="navbar">
+                <a href="index.html" class="homebtn">Home</a>
+                <a href="more.html" class="morebtn">More</a>
+            </div>
+        </nav>
+    </header>
+    
     <main>
 
     </main>
