--- a/more.html
+++ b/more.html
@@ -4,9 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Yellow Journalism - More</title>
 </head>
 <body>
-    <main></main>
+    <header>
+        <nav>
+            <div class="navbar">
+                <a href="index.html" class="homebtn">Home</a>
+                <a href="more.html" class="morebtn">More</a>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="row-1">
+            <div class="row-1-text">
+                <h2></h2>
+                <p></p>
+            </div>
+            <div class="row-1-img"></div>
+        </div>
+        <div class="row-2">
+            <div class="row-2-text">
+                <h2></h2>
+                <p></p>
+            </div>
+            <div class="row-2-img"></div>
+        </div>
+        <div class="row-3">
+            <div class="row-3-text">
+                <h2></h2>
+                <p></p>
+            </div>
+            <div class="row-3-img"></div>
+        </div>
+    </main>
+    <footer>
+        <div class="sources">
+            <ul>
+                <li><a href="https://www.mtsu.edu/first-amendment/article/1253/yellow-journalism" target="_blank">Source 1</a></li>
+                <li><a href="https://daily.jstor.org/to-fix-fake-news-look-to-yellow-journalism" target="_blank">Source 2</a></li>
+                <li><a href="https://www.newworldencyclopedia.org/entry/Yellow_journalism" target="_blank">Source 3</a></li>
+                <li><a href="https://www.history.com/news/spanish-american-war-yellow-journalism-hearst-pulitzer" target="_blank">Source 4</a></li>
+                <li><a href="https://examples.yourdictionary.com/examples-of-yellow-journalism.html" target="_blank">Source 5</a></li>
+            </ul>
+        </div>
+        <div class="address">
+            <address>
+
+            </address>
+        </div>
+        <div class="copyright">
+
+        </div>
+    </footer>
 </body>
 </html>
