--- a/more.html
+++ b/more.html
@@ -17,27 +17,28 @@
         </nav>
     </header>
     <main>
-        <div class="row-1">
-            <div class="row-1-text">
-                <h2></h2>
-                <p></p>
-            </div>
-            <div class="row-1-img"></div>
-        </div>
-        <div class="row-2">
-            <div class="row-2-text">
-                <h2></h2>
-                <p></p>
-            </div>
-            <div class="row-2-img"></div>
-        </div>
-        <div class="row-3">
-            <div class="row-3-text">
-                <h2></h2>
-                <p></p>
-            </div>
-            <div class="row-3-img"></div>
-        </div>
+        <section>
+            <article class="one">
+                <div>
+                    <h2>
+                        Identify Yellow Journalism
+                    </h2>
+                    <p>
+                        The ability to identify Yellow Journalism is an important skill to learn, so how can you do it? The first step is to stop believing everything you see, never assume a headline to be true no matter the source. Take your time to read the full story, search for the facts, and watch out for bias and potential misinformation.
+                    </p>
+                </div>
+            </article>
+            <article class="two">
+                <div>
+                    <h2>
+                        What Can You Do About Yellow Journalism?
+                    </h2>
+                    <p>
+                        There is not much you can do about Yellow Journalism other than watching out and not getting fooled by it. Most yellow journalism today contains clickbait titles such as “Giant Asteroid Soon To Destroy Earth” only to later reveal in the article that the asteroid is hardly a threat. You should take your time and learn to recognize Yellow Journalism, watch out for bias and misinformation.
+                    </p>
+                </div>
+            </article>
+        </section>
     </main>
     <footer>
         <div class="sources">
