--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="one-flex">
             <article class="one">
                 <div class="one-text">
                     <h2>What is Yellow Journalism?</h2>
@@ -28,12 +28,12 @@
                     </p>
                 </div>
                 <div class="one-image">
-                    <img src="" alt="">
+                    <img src="images/Yellow-Journalism-Index-Header.jpg" alt="One-Image">
                 </div>
             </article>
             <article class="two">
                 <div class="two-image">
-                    <img src="" alt="">
+                    <img src="images/Yellow-Journalism-Index-Header.jpg" alt="Two-Image">
                 </div>
                 <div class="two-text">
                     <h2>The History of Yellow Journalism?</h2>
@@ -48,7 +48,7 @@
                     </p>
                 </div>
                 <div class="three-image">
-                    <img src="" alt="">
+                    <img src="images/Yellow-Journalism-Index-Header.jpg" alt="Three-Image">
                 </div>
             </article>
         </section>
