--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="more.html" class="morebtn">More</a>
             </div>
         </nav>
-        <div class="hero">
+        <div class="hero-1">
             <h1>Yellow Journalism</h1>
         </div>
     </header>
@@ -28,12 +28,12 @@
                     </p>
                 </div>
                 <div class="one-image">
-                    <img src="images/Yellow-Journalism-Index-Header.jpg" alt="One-Image">
+                    <img src="images/Placeholder.png" alt="One-Image">
                 </div>
             </article>
             <article class="two">
                 <div class="two-image">
-                    <img src="images/Yellow-Journalism-Index-Header.jpg" alt="Two-Image">
+                    <img src="images/Placeholder.png" alt="Two-Image">
                 </div>
                 <div class="two-text">
                     <h2>The History of Yellow Journalism?</h2>
@@ -48,7 +48,7 @@
                     </p>
                 </div>
                 <div class="three-image">
-                    <img src="images/Yellow-Journalism-Index-Header.jpg" alt="Three-Image">
+                    <img src="images/Placeholder.png" alt="Three-Image">
                 </div>
             </article>
         </section>
