--- a/more.html
+++ b/more.html
@@ -15,6 +15,9 @@
                 <a href="more.html" class="morebtn">More</a>
             </div>
         </nav>
+        <div class="hero-2">
+            <h1>Yellow Journalism</h1>
+        </div>
     </header>
     <main>
         <section>
