--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 </p>
             </div>
             <div class="one-image">
-                <img src="images/Image 1.png" alt="One-Image">
+                <img src="images/Eggs-Newspaper.png" alt="One-Image">
             </div>
             <div class="two-image">
-                <img src="images/Span-amer-war.jpg" alt="Two-Image">
+                <img src="images/Spanish-American-War.jpg" alt="Two-Image">
             </div>
             <div class="two-text">
                 <h2>The History of Yellow Journalism?</h2>
@@ -43,10 +43,10 @@
                 </p>
             </div>
             <div class="three-image">
-                <img src="images/Placeholder.png" alt="Three-Image">
+                <img src="images/checkout-line.jpg" alt="Three-Image">
             </div>
         </section>
-        <section>
+        <section class="center-button">
             <div class="button">
                 <a href="more.html">What Can You Do?</a>
             </div>
@@ -55,6 +55,7 @@
     </main>
     <footer>
         <div class="sources">
+            <p>Sources</p>
             <ul>
                 <li><a href="https://www.mtsu.edu/first-amendment/article/1253/yellow-journalism" target="_blank">Source 1</a></li>
                 <li><a href="https://daily.jstor.org/to-fix-fake-news-look-to-yellow-journalism" target="_blank">Source 2</a></li>
@@ -64,12 +65,18 @@
             </ul>
         </div>
         <div class="address">
+            <p>Contact</p>
             <address>
-
+                <ul>
+                    <li>2455 Clovis Ave.</li>
+                    <li>Clovis, CA 93612</li>
+                    <li>(559)123-4567</li>
+                    <li>info@cart.org</li>
+                </ul>
             </address>
         </div>
         <div class="copyright">
-
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ducimus quod tenetur neque numquam nemo, dolorem nostrum omnis vero illum esse reprehenderit, illo sit dolores saepe. Doloremque nam soluta corporis.</p>
         </div>
     </footer>
 </body>
