--- a/more.html
+++ b/more.html
@@ -20,31 +20,28 @@
         </div>
     </header>
     <main>
-        <section>
-            <article class="one">
-                <div>
-                    <h2>
-                        Identify Yellow Journalism
-                    </h2>
-                    <p>
-                        The ability to identify Yellow Journalism is an important skill to learn, so how can you do it? The first step is to stop believing everything you see, never assume a headline to be true no matter the source. Take your time to read the full story, search for the facts, and watch out for bias and potential misinformation.
-                    </p>
-                </div>
-            </article>
-            <article class="two">
-                <div>
-                    <h2>
-                        What Can You Do About Yellow Journalism?
-                    </h2>
-                    <p>
-                        There is not much you can do about Yellow Journalism other than watching out and not getting fooled by it. Most yellow journalism today contains clickbait titles such as “Giant Asteroid Soon To Destroy Earth” only to later reveal in the article that the asteroid is hardly a threat. You should take your time and learn to recognize Yellow Journalism, watch out for bias and misinformation.
-                    </p>
-                </div>
-            </article>
+        <section class="one-flex">
+            <div class="one-text">
+                <h2>What Can You Do About Yellow Journalism?</h2>
+                <p>There is not much you can do about Yellow Journalism other than watching out and not getting fooled by it. Most yellow journalism today contains clickbait titles such as “Giant Asteroid Soon To Destroy Earth” only to later reveal in the article that the asteroid is hardly a threat. You should take your time and learn to recognize Yellow Journalism, watch out for bias and misinformation.
+                </p>
+            </div>
+            <div class="one-image">
+                <img src="/images/Placeholder.png" alt="One-Image">
+            </div>
+            <div class="two-image">
+                <img src="/images/Placeholder.png" alt="Two-Image">
+            </div>
+            <div class="two-text">
+                <h2>Identifying Yellow Journalism?</h2>
+                <p>The ability to identify Yellow Journalism is an important skill to learn, so how can you do it? The first step is to stop believing everything you see, never assume a headline to be true no matter the source. Take your time to read the full story, search for the facts, and watch out for bias and potential misinformation.
+                </p>
+            </div>
         </section>
     </main>
     <footer>
         <div class="sources">
+            <p>Sources</p>
             <ul>
                 <li><a href="https://www.mtsu.edu/first-amendment/article/1253/yellow-journalism" target="_blank">Source 1</a></li>
                 <li><a href="https://daily.jstor.org/to-fix-fake-news-look-to-yellow-journalism" target="_blank">Source 2</a></li>
@@ -54,12 +51,18 @@
             </ul>
         </div>
         <div class="address">
+            <p>Contact</p>
             <address>
-
+                <ul>
+                    <li>2455 Clovis Ave.</li>
+                    <li>Clovis, CA 93612</li>
+                    <li>(559)123-4567</li>
+                    <li>info@cart.org</li>
+                </ul>
             </address>
         </div>
         <div class="copyright">
-
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ducimus quod tenetur neque numquam nemo, dolorem nostrum omnis vero illum esse reprehenderit, illo sit dolores saepe. Doloremque nam soluta corporis.</p>
         </div>
     </footer>
 </body>
