--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 </p>
             </div>
             <div class="one-image">
-                <img src="images/Eggs-Newspaper.png" alt="One-Image">
+                <img src="/images/Photos/Eggs-Newspaper.png" alt="One-Image">
             </div>
             <div class="two-image">
-                <img src="images/Spanish-American-War.jpg" alt="Two-Image">
+                <img src="images/Photos/Spanish-American-War.jpg" alt="Two-Image">
             </div>
             <div class="two-text">
                 <h2>The History of Yellow Journalism?</h2>
@@ -43,11 +43,11 @@
                 </p>
             </div>
             <div class="three-image">
-                <img src="images/checkout-line.jpg" alt="Three-Image">
+                <img src="images/Photos/checkout-line.jpg" alt="Three-Image">
             </div>
         </section>
         <section class="center-button">
-            <div class="button">
+            <div class="button more-button-image">
                 <a href="more.html">What Can You Do?</a>
             </div>
         </section>
@@ -76,7 +76,7 @@
             </address>
         </div>
         <div class="copyright">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ducimus quod tenetur neque numquam nemo, dolorem nostrum omnis vero illum esse reprehenderit, illo sit dolores saepe. Doloremque nam soluta corporis.</p>
+            <p>&copy;<em>Tyler Fursman INC.</em></p>
         </div>
     </footer>
 </body>
