--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Yellow Journalism - Home</title>
 </head>
 <body>
@@ -20,17 +20,17 @@
         </div>
     </header>
     <main>
-        <section class="one-flex">
+        <section class="content">
             <div class="one-text">
                 <h2>What is Yellow Journalism?</h2>
                 <p>Yellow Journalism is an unprofessional and dishonest practice used by journalists and the media to get more people clicking and reading their articles. The technique first uses large, bold headlines and illustrations that can not be missed to attract the attention of as many people as possible. From there, the headline then uses over the top wording to get their audience hooked and reading. Typically the stories presented in these articles are very biased and far from the actual truth yet they seem to always fool so many people. Yellow Journalism is not just history, it still exists today more than ever before and it is important to know how you can identify it.
                 </p>
             </div>
             <div class="one-image">
-                <img src="/images/Photos/Eggs-Newspaper.png" alt="One-Image">
+                <img src="/images/eggs-newspaper.png" alt="Newspaper with fake titles. (Yellow Journalism)">
             </div>
             <div class="two-image">
-                <img src="images/Photos/Spanish-American-War.jpg" alt="Two-Image">
+                <img src="/images/spanish-american-war.jpg" alt="Naval battle between Spain and the United States of America during the Spanish-American War.">
             </div>
             <div class="two-text">
                 <h2>The History of Yellow Journalism?</h2>
@@ -43,7 +43,7 @@
                 </p>
             </div>
             <div class="three-image">
-                <img src="images/Photos/checkout-line.jpg" alt="Three-Image">
+                <img src="/images/checkout-line.jpg" alt="Checkout line at a store with newspapers and articles on display.">
             </div>
         </section>
         <section class="center-button">
@@ -51,7 +51,6 @@
                 <a href="more.html">What Can You Do?</a>
             </div>
         </section>
-        
     </main>
     <footer>
         <div class="sources">
