--- a/more.html
+++ b/more.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Yellow Journalism - More</title>
 </head>
 <body>
@@ -20,17 +20,17 @@
         </div>
     </header>
     <main>
-        <section class="one-flex">
+        <section class="content">
             <div class="one-text">
                 <h2>What Can You Do About Yellow Journalism?</h2>
                 <p>There is not much you can do about Yellow Journalism other than watching out and not getting fooled by it. Most yellow journalism today contains clickbait titles such as “Giant Asteroid Soon To Destroy Earth” only to later reveal in the article that the asteroid is hardly a threat. You should take your time and learn to recognize Yellow Journalism, watch out for bias and misinformation.
                 </p>
             </div>
             <div class="one-image">
-                <img src="/images/Placeholder.png" alt="One-Image">
+                <img src="/images/asteroid-heading-towards-earth.jpg" alt="Asteroid heading towards the Earth.">
             </div>
             <div class="two-image">
-                <img src="/images/Placeholder.png" alt="Two-Image">
+                <img src="/images/maginifying-glass-pointing-on-book.jpg" alt="Magfiying glass pointing at the text in a book.">
             </div>
             <div class="two-text">
                 <h2>Identifying Yellow Journalism?</h2>
