--- a/more.html
+++ b/more.html
@@ -21,37 +21,37 @@
     </header>
     <main>
         <section class="content">
-            <div class="one-text">
-                <h2>What Can You Do About Yellow Journalism?</h2>
+            <div class="text-container-1">
+                <h2>What Can You Do?</h2>
                 <p>There is not much you can do about Yellow Journalism other than watching out and not getting fooled by it. Most yellow journalism today contains clickbait titles such as “Giant Asteroid Soon To Destroy Earth” only to later reveal in the article that the asteroid is hardly a threat. You should take your time and learn to recognize Yellow Journalism, watch out for bias and misinformation.
                 </p>
             </div>
-            <div class="one-image">
+            <div class="image-container-1">
                 <img src="/images/asteroid-heading-towards-earth.jpg" alt="Asteroid heading towards the Earth.">
             </div>
-            <div class="two-image">
-                <img src="/images/maginifying-glass-pointing-on-book.jpg" alt="Magfiying glass pointing at the text in a book.">
-            </div>
-            <div class="two-text">
+            <div class="text-container-2">
                 <h2>Identifying Yellow Journalism?</h2>
                 <p>The ability to identify Yellow Journalism is an important skill to learn, so how can you do it? The first step is to stop believing everything you see, never assume a headline to be true no matter the source. Take your time to read the full story, search for the facts, and watch out for bias and potential misinformation.
                 </p>
+            </div>
+            <div class="image-container-2">
+                <img src="/images/maginifying-glass-pointing-on-book.jpg" alt="Magfiying glass pointing at the text in a book.">
             </div>
         </section>
     </main>
     <footer>
         <div class="sources">
-            <p>Sources</p>
+            <p><strong>Sources</strong></p>
             <ul>
-                <li><a href="https://www.mtsu.edu/first-amendment/article/1253/yellow-journalism" target="_blank">Source 1</a></li>
-                <li><a href="https://daily.jstor.org/to-fix-fake-news-look-to-yellow-journalism" target="_blank">Source 2</a></li>
-                <li><a href="https://www.newworldencyclopedia.org/entry/Yellow_journalism" target="_blank">Source 3</a></li>
-                <li><a href="https://www.history.com/news/spanish-american-war-yellow-journalism-hearst-pulitzer" target="_blank">Source 4</a></li>
-                <li><a href="https://examples.yourdictionary.com/examples-of-yellow-journalism.html" target="_blank">Source 5</a></li>
+                <li><a href="https://www.mtsu.edu/first-amendment/article/1253/yellow-journalism" target="_blank">Middle Tennessee State University</a></li>
+                <li><a href="https://daily.jstor.org/to-fix-fake-news-look-to-yellow-journalism" target="_blank">JSTOR Daily</a></li>
+                <li><a href="https://www.newworldencyclopedia.org/entry/Yellow_journalism" target="_blank">New World Encyclopedia</a></li>
+                <li><a href="https://www.history.com/news/spanish-american-war-yellow-journalism-hearst-pulitzer" target="_blank">HISTORY</a></li>
+                <li><a href="https://examples.yourdictionary.com/examples-of-yellow-journalism.html" target="_blank">YourDictionary</a></li>
             </ul>
         </div>
         <div class="address">
-            <p>Contact</p>
+            <p><strong>Contact</strong></p>
             <address>
                 <ul>
                     <li>2455 Clovis Ave.</li>
@@ -62,7 +62,11 @@
             </address>
         </div>
         <div class="copyright">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ducimus quod tenetur neque numquam nemo, dolorem nostrum omnis vero illum esse reprehenderit, illo sit dolores saepe. Doloremque nam soluta corporis.</p>
+            <p><strong>Credit</strong></p>
+            <ul>
+                <li>Copyright &copy; 2022. The Center for Advanced Research and Technology.</li>
+                <li>Site content written by Tyler Fursman.</li>
+            </ul>
         </div>
     </footer>
 </body>
