--- a/more.html
+++ b/more.html
@@ -31,8 +31,7 @@
             </div>
             <div class="text-container-2">
                 <h2>Identifying Yellow Journalism?</h2>
-                <p>The ability to identify Yellow Journalism is an important skill to learn, so how can you do it? The first step is to stop believing everything you see, never assume a headline to be true no matter the source. Take your time to read the full story, search for the facts, and watch out for bias and potential misinformation.
-                </p>
+                <p>The ability to identify Yellow Journalism is an important skill to learn, so how can you do it? The first step is to stop believing everything you see, never assume a headline to be true no matter the source. Take your time to read the full story, search for the facts, and watch out for bias and potential misinformation.</p>
             </div>
             <div class="image-container-2">
                 <img src="/images/maginifying-glass-pointing-on-book.jpg" alt="Magfiying glass pointing at the text in a book.">
