--- a/index.html
+++ b/index.html
@@ -23,24 +23,21 @@
         <section class="content">
             <div class="text-container-1">
                 <h2>What is Yellow Journalism?</h2>
-                <p>Yellow Journalism is an unprofessional and dishonest practice used by journalists and the media to get more people clicking and reading their articles. The technique first uses large, bold headlines and illustrations that can not be missed to attract the attention of as many people as possible. From there, the headline then uses over the top wording to get their audience hooked and reading. Typically the stories presented in these articles are very biased and far from the actual truth yet they seem to always fool so many people. Yellow Journalism is not just history, it still exists today more than ever before and it is important to know how you can identify it.
-                </p>
+                <p>Yellow Journalism is an unprofessional and dishonest practice used by journalists and the media to get more people clicking and reading their articles. The technique first uses large, bold headlines and illustrations that can not be missed to attract the attention of as many people as possible. From there, the headline then uses over the top wording to get their audience hooked and reading. Typically the stories presented in these articles are very biased and far from the actual truth yet they seem to always fool so many people. Yellow Journalism is not just history, it still exists today more than ever before and it is important to know how you can identify it.</p>
             </div>
             <div class="image-container-1">
                 <img src="/images/eggs-newspaper.png" alt="Newspaper with fake titles. (Yellow Journalism)">
             </div>
             <div class="text-container-2">
                 <h2>The History of Yellow Journalism?</h2>
-                <p>The term “Yellow Journalism” originated from the rivalry between two massive newspapers; Joseph Pulitzer's New York World and William Randolph Hearst's New York Journal. This rivalry resulted in false reporting from both newspapers and arguably caused an entire war between Spain and the United State. Both newspapers published biased articles claiming Spain had exploded and sunken a U.S. battleship, The Maine. These articles caused the American people to want war with Spain in Cuba and eventually resulted in the Spanish-American War in 1898. The Spanish-American War is just one example of how dangerous Yellow Journalism can be.
-                </p>
+                <p>The term “Yellow Journalism” originated from the rivalry between two massive newspapers; Joseph Pulitzer's New York World and William Randolph Hearst's New York Journal. This rivalry resulted in false reporting from both newspapers and arguably caused an entire war between Spain and the United State. Both newspapers published biased articles claiming Spain had exploded and sunken a U.S. battleship, The Maine. These articles caused the American people to want war with Spain in Cuba and eventually resulted in the Spanish-American War in 1898. The Spanish-American War is just one example of how dangerous Yellow Journalism can be.</p>
             </div>
             <div class="image-container-2">
                 <img src="/images/spanish-american-war.jpg" alt="Naval battle between Spain and the United States of America during the Spanish-American War.">
             </div>
             <div class="text-container-3">
                 <h2>Modern Day Yellow Journalism?</h2>
-                <p>There are many examples of modern day yellow journalism and it isn't too different from what it was years ago. The media often competes for the most clicks and not for the most accurate news. If you look at the news, you will notice lots of yellow journalism.
-                </p>
+                <p>There are many examples of modern day yellow journalism and it isn't too different from what it was years ago. The media often competes for the most clicks and not for the most accurate news. If you look at the news, you will notice lots of yellow journalism.</p>
             </div>
             <div class="image-container-3">
                 <img src="/images/checkout-line.jpg" alt="Checkout line at a store with newspapers and articles on display.">
