--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
     <title>Yellow Journalism - Home</title>
 </head>
 <body>
@@ -41,11 +44,6 @@
             </div>
             <div class="image-container-3">
                 <img src="/images/checkout-line.jpg" alt="Checkout line at a store with newspapers and articles on display.">
-            </div>
-        </section>
-        <section class="center-button">
-            <div class="button more-button-image">
-                <a href="more.html">What Can You Do?</a>
             </div>
         </section>
     </main>
